--- a/jupyter/chap11.ipynb
+++ b/jupyter/chap11.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "steady-bridge",
+   "id": "pressing-munich",
    "metadata": {},
    "source": [
     "# Chapter 11"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "endless-enclosure",
+   "id": "detected-creation",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "drawn-population",
+   "id": "breathing-commonwealth",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -43,14 +43,14 @@
     "    !pip install pint\n",
     "    \n",
     "try:\n",
-    "    from modsim import *\n",
+    "    import modsim\n",
     "except ImportError:\n",
     "    !pip install modsimpy"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "chicken-tamil",
+   "id": "persistent-carbon",
    "metadata": {},
    "source": [
     "In this chapter, we develop a model of an epidemic as it spreads in a\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "developed-asset",
+   "id": "working-patent",
    "metadata": {},
    "source": [
     "## The Freshman Plague\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "respected-cleveland",
+   "id": "distant-expense",
    "metadata": {},
    "source": [
     "## The SIR model\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "arabic-flight",
+   "id": "reasonable-kitchen",
    "metadata": {},
    "source": [
     "Let's think about how the number of people in each category changes over time. Suppose we know that people with the disease are infectious for a period of 4 days, on average. If 100 people are infectious at a\n",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "emotional-ranch",
+   "id": "important-yugoslavia",
    "metadata": {},
    "source": [
     "Now let's think about the number of new infections. Suppose we know that each susceptible person comes into contact with 1 person every 3 days, on average, in a way that would cause them to become infected if the other person is infected. We'll denote this contact rate with the Greek letter beta, $\\beta$.\n",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "greek-reference",
+   "id": "virgin-cambodia",
    "metadata": {},
    "source": [
     "In summary:\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afraid-consultation",
+   "id": "fourth-celtic",
    "metadata": {},
    "source": [
     "## The SIR equations\n",
@@ -163,11 +163,10 @@
     "If we treat time as a continuous quantity, we can write differential\n",
     "equations that describe the rates of change for $s$, $i$, and $r$ (where $r$ is the fraction of the population that has recovered):\n",
     "\n",
-    "$$\\frac{ds}{dt} = -\\beta s i$$\n",
-    "\n",
-    "$$\\frac{di}{dt} = \\beta s i - \\gamma i$$\n",
-    "\n",
-    "$$\\frac{dr}{dt} = \\gamma i$$ \n",
+    "$$\\begin{aligned}\n",
+    "\\frac{ds}{dt} &= -\\beta s i \\\\\n",
+    "\\frac{di}{dt} &= \\beta s i - \\gamma i\\\\\n",
+    "\\frac{dr}{dt} &= \\gamma i\\end{aligned}$$ \n",
     "\n",
     "To avoid cluttering the equations, I leave it implied that $s$ is a function of time, $s(t)$, and likewise for $i$ and $r$.\n",
     "\n",
@@ -192,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "respected-bangkok",
+   "id": "martial-details",
    "metadata": {},
    "source": [
     "## Implementation\n",
@@ -214,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "british-operations",
+   "id": "criminal-change",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "laden-strain",
+   "id": "chronic-jonathan",
    "metadata": {},
    "source": [
     "And then convert the numbers to fractions by dividing by the total:"
@@ -247,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "complete-disposition",
+   "id": "pediatric-ratio",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "curious-commerce",
+   "id": "ordinary-scottish",
    "metadata": {},
    "source": [
     "For now, let's assume we know the time between contacts and time between\n",
@@ -283,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "palestinian-gender",
+   "id": "little-stylus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "innocent-bacon",
+   "id": "covered-avenue",
    "metadata": {},
    "source": [
     "We can use them to compute the parameters of the model:"
@@ -302,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "double-nickname",
+   "id": "veterinary-aerospace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "human-halifax",
+   "id": "lightweight-delta",
    "metadata": {},
    "source": [
     "Now we need a `System` object to store the parameters and initial\n",
@@ -322,10 +321,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "missing-animal",
+   "id": "nasty-sherman",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "def make_system(beta, gamma):\n",
     "    init = State(S=89, I=1, R=0)\n",
     "    init /= sum(init)\n",
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impressive-moderator",
+   "id": "victorian-blogger",
    "metadata": {},
    "source": [
     "The default value for `t_end` is 14 weeks, about the length of a\n",
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "artistic-bunch",
+   "id": "supported-shadow",
    "metadata": {
     "scrolled": true
    },
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "latter-respondent",
+   "id": "alone-desire",
    "metadata": {},
    "source": [
     "## The update function\n",
@@ -395,10 +395,11 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "forbidden-shelter",
+   "id": "wound-wayne",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "def update_func(state, t, system):\n",
     "    s, i, r = state\n",
     "\n",
@@ -414,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "subsequent-duplicate",
+   "id": "aboriginal-malpractice",
    "metadata": {},
    "source": [
     "The first line uses a feature we have not seen before, **multiple\n",
@@ -434,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "complimentary-force",
+   "id": "assigned-feelings",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "affected-presentation",
+   "id": "standard-search",
    "metadata": {},
    "source": [
     "You might notice that this version of `update_func` does not use one of its parameters, `t`. I include it anyway because update functions\n",
@@ -467,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "certain-clear",
+   "id": "informational-cisco",
    "metadata": {},
    "source": [
     "## Running the simulation\n",
@@ -478,10 +479,11 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "emotional-thomas",
+   "id": "occasional-pottery",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "from numpy import arange\n",
     "\n",
     "def run_simulation(system, update_func):\n",
@@ -495,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "controversial-magic",
+   "id": "fifteen-metallic",
    "metadata": {},
    "source": [
     "The parameters of `run_simulation` are the `System` object and the\n",
@@ -508,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "theoretical-ideal",
+   "id": "differential-difference",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "working-austin",
+   "id": "incredible-marsh",
    "metadata": {},
    "source": [
     "The result is the final state of the system:"
@@ -527,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "russian-professor",
+   "id": "weekly-acrobat",
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "informed-drunk",
+   "id": "behind-removal",
    "metadata": {},
    "source": [
     "This result indicates that after 14 weeks (98 days), about 52% of the\n",
@@ -560,7 +562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "funded-civilian",
+   "id": "serial-genius",
    "metadata": {},
    "source": [
     "## Collecting the results\n",
@@ -574,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "directed-entertainment",
+   "id": "advanced-recommendation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "underlying-crime",
+   "id": "behind-breathing",
    "metadata": {},
    "source": [
     "First, we create `TimeSeries` objects to store the results. Notice that\n",
@@ -621,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "hired-miller",
+   "id": "subtle-zambia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "normal-sodium",
+   "id": "smoking-toddler",
    "metadata": {},
    "source": [
     "We'll use the following function to plot the results:"
@@ -640,10 +642,11 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "aboriginal-myrtle",
+   "id": "welcome-tractor",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "from modsim import decorate\n",
     "\n",
     "def plot_results(S, I, R):\n",
@@ -656,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "waiting-blues",
+   "id": "important-command",
    "metadata": {},
    "source": [
     "And run it like this:"
@@ -665,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "timely-dream",
+   "id": "agricultural-joining",
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "moral-barcelona",
+   "id": "civic-pharmacy",
    "metadata": {},
    "source": [
     "Notice that it takes about three weeks (21 days) for the outbreak to get going, and about six weeks (42 days) before it peaks. The fraction of the population that's infected is never very high, but it adds up. In total, almost half the population gets sick."
@@ -695,7 +698,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "academic-mileage",
+   "id": "unexpected-empire",
    "metadata": {},
    "source": [
     "## Now with a TimeFrame\n",
@@ -712,10 +715,11 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "assured-phenomenon",
+   "id": "native-central",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "from modsim import TimeFrame\n",
     "\n",
     "def run_simulation(system, update_func):\n",
@@ -730,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "inner-brave",
+   "id": "beginning-secret",
    "metadata": {},
    "source": [
     "The first line creates an empty `TimeFrame` with one column for each\n",
@@ -764,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "equal-thinking",
+   "id": "quick-fifty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "framed-dairy",
+   "id": "global-complement",
    "metadata": {},
    "source": [
     "And plot the results like this:"
@@ -782,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "neutral-baker",
+   "id": "listed-enough",
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "warming-beauty",
+   "id": "welsh-distinction",
    "metadata": {},
    "source": [
     "As with a `DataFrame`, we can use the dot operator to select columns\n",
@@ -813,7 +817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indie-ancient",
+   "id": "neutral-replacement",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -822,7 +826,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "removed-stevens",
+   "id": "induced-tunnel",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -830,7 +834,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "listed-istanbul",
+   "id": "floral-remove",
    "metadata": {},
    "source": [
     "**Exercise**  Suppose the time between contacts is 4 days and the recovery time is 5 days.  After 14 weeks, how many students, total, have been infected?\n",
@@ -841,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "strange-soviet",
+   "id": "recovered-freeze",
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "growing-clear",
+   "id": "interpreted-colony",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -884,7 +888,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "polar-edgar",
+   "id": "given-canberra",
    "metadata": {},
    "outputs": [],
    "source": []
