--- a/jupyter/chap12.ipynb
+++ b/jupyter/chap12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "noble-particle",
+   "id": "combined-semiconductor",
    "metadata": {},
    "source": [
     "# Chapter 12"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conscious-partner",
+   "id": "excellent-orchestra",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "governing-nerve",
+   "id": "absolute-density",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -43,14 +43,14 @@
     "    !pip install pint\n",
     "    \n",
     "try:\n",
-    "    from modsim import *\n",
+    "    import modsim\n",
     "except ImportError:\n",
     "    !pip install modsimpy"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dominican-johns",
+   "id": "athletic-diameter",
    "metadata": {},
    "source": [
     "### Code\n",
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "changed-netherlands",
+   "id": "expensive-venice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "thorough-heading",
+   "id": "satellite-fleet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,11 +116,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "peaceful-collective",
+   "id": "affiliated-metabolism",
    "metadata": {},
    "outputs": [],
    "source": [
     "from numpy import arange\n",
+    "from modsim import TimeFrame\n",
     "\n",
     "def run_simulation(system, update_func):\n",
     "    \"\"\"Runs a simulation of the system.\n",
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "patent-madagascar",
+   "id": "identical-steam",
    "metadata": {},
    "source": [
     "In the previous chapter I presented the SIR model of infectious disease and used it to model the Freshman Plague at Olin. In this chapter we'll consider metrics intended to quantify the effects of the disease and interventions intended to reduce those effects."
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "knowing-connecticut",
+   "id": "complex-renewal",
    "metadata": {},
    "source": [
     "## Immunization\n",
@@ -167,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "catholic-walker",
+   "id": "recent-cooper",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "logical-mailman",
+   "id": "arranged-screening",
    "metadata": {},
    "source": [
     "`add_immunization` moves the given fraction of the population from `S`\n",
@@ -188,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "sophisticated-occasions",
+   "id": "found-learning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "postal-haiti",
+   "id": "unsigned-joseph",
    "metadata": {},
    "source": [
     "If we assume that 10% of students are vaccinated at the\n",
@@ -215,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "abandoned-piece",
+   "id": "funny-copper",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "robust-forestry",
+   "id": "bronze-techno",
    "metadata": {},
    "source": [
     "The following figure shows `S` as a function of time, with and\n",
@@ -236,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "suffering-coupon",
+   "id": "divided-biotechnology",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "shaped-assets",
+   "id": "postal-cemetery",
    "metadata": {},
    "source": [
     "## Metrics\n",
@@ -285,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "unable-joshua",
+   "id": "synthetic-element",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "floral-transcription",
+   "id": "recovered-picnic",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "cardiovascular-acting",
+   "id": "american-transfer",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reliable-fisher",
+   "id": "adverse-trance",
    "metadata": {},
    "source": [
     "Without immunization, almost 47% of the population gets infected at some point. With 10% immunization, only 31% get infected. That's pretty good."
@@ -347,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "multiple-springfield",
+   "id": "eight-maximum",
    "metadata": {},
    "source": [
     "## Sweeping Immunization\n",
@@ -359,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "funny-batman",
+   "id": "progressive-architect",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "normal-blowing",
+   "id": "indie-seeker",
    "metadata": {},
    "source": [
     "The parameter of `sweep_immunity` is an array of immunization rates. The\n",
@@ -391,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "severe-oklahoma",
+   "id": "measured-pavilion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "sudden-worker",
+   "id": "interior-humanitarian",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fantastic-violence",
+   "id": "turkish-mumbai",
    "metadata": {},
    "source": [
     "As the immunization rate increases, the number of infections drops\n",
@@ -445,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "completed-stand",
+   "id": "french-spouse",
    "metadata": {},
    "source": [
     "The steepness of the curve is a blessing and a curse. It's a blessing\n",
@@ -463,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "known-classic",
+   "id": "changed-capability",
    "metadata": {},
    "source": [
     "## Hand washing\n",
@@ -495,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suspected-chosen",
+   "id": "alpine-guest",
    "metadata": {},
    "source": [
     "Now we have to model the relationship between the money we spend and the\n",
@@ -513,14 +514,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ultimate-leader",
+   "id": "closed-feature",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "tutorial-terrace",
+   "id": "agricultural-trinidad",
    "metadata": {},
    "source": [
     "### Logistic function"
@@ -528,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abroad-birmingham",
+   "id": "cheap-structure",
    "metadata": {},
    "source": [
     "To model the effect of a hand-washing campaign, I'll use a [generalized logistic function](https://en.wikipedia.org/wiki/Generalised_logistic_function) (GLF), which is a convenient function for modeling curves that have a generally sigmoid shape.  The parameters of the GLF correspond to various features of the curve in a way that makes it easy to find a function that has the shape you want, based on data or background information about the scenario."
@@ -537,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "fossil-adolescent",
+   "id": "blond-armstrong",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cloudy-canvas",
+   "id": "seven-budget",
    "metadata": {},
    "source": [
     "The following array represents the range of possible spending."
@@ -572,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "equal-lesson",
+   "id": "disturbed-amount",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "competitive-dylan",
+   "id": "supreme-nutrition",
    "metadata": {},
    "source": [
     "`compute_factor` computes the reduction in `beta` for a given level of campaign spending.\n",
@@ -596,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "ecological-puppy",
+   "id": "otherwise-answer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "informed-maple",
+   "id": "expected-venture",
    "metadata": {},
    "source": [
     "Here's what it looks like."
@@ -621,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "diverse-ensemble",
+   "id": "seventh-strike",
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "published-decade",
+   "id": "legal-michigan",
    "metadata": {},
    "source": [
     "The result is the following function, which\n",
@@ -660,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "atomic-guatemala",
+   "id": "obvious-congress",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reflected-details",
+   "id": "sunset-investing",
    "metadata": {},
    "source": [
     "I use `compute_factor` to write `add_hand_washing`, which takes a\n",
@@ -681,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "presidential-omaha",
+   "id": "polish-multiple",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "perfect-promotion",
+   "id": "worthy-fellowship",
    "metadata": {},
    "source": [
     "Now we can sweep a range of values for `spending` and use the simulation\n",
@@ -702,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "outer-nutrition",
+   "id": "statistical-garden",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "agricultural-interpretation",
+   "id": "clinical-surge",
    "metadata": {},
    "source": [
     "Here's how we run it:"
@@ -729,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "first-termination",
+   "id": "joined-graduation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cardiac-shopper",
+   "id": "designing-smile",
    "metadata": {},
    "source": [
     "The following figure shows the result. "
@@ -750,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "cardiovascular-coach",
+   "id": "cheap-decision",
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fifth-highlight",
+   "id": "selective-right",
    "metadata": {},
    "source": [
     "Below \\$200, the campaign has little effect. \n",
@@ -788,7 +789,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ruled-disease",
+   "id": "lucky-boulder",
    "metadata": {},
    "source": [
     "## Optimization\n",
@@ -803,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "representative-brook",
+   "id": "surrounded-copying",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +816,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "another-idaho",
+   "id": "expired-conditioning",
    "metadata": {},
    "source": [
     "The fraction `budget/price_per_dose` might not be an integer. `int` is a\n",
@@ -827,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "historic-inclusion",
+   "id": "shaped-utility",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "straight-equation",
+   "id": "occupational-reply",
    "metadata": {},
    "source": [
     "In this example we call `linrange` with only one argument; it returns a\n",
@@ -849,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "received-swiss",
+   "id": "recognized-release",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "appropriate-design",
+   "id": "cardiac-mitchell",
    "metadata": {},
    "source": [
     "For each number of doses, we compute the fraction of students we can\n",
@@ -886,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "original-browse",
+   "id": "worth-mounting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "technical-violation",
+   "id": "adjusted-highlight",
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +923,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "economic-newspaper",
+   "id": "dynamic-easter",
    "metadata": {},
    "source": [
     "If we buy no doses of vaccine and spend the entire budget on the campaign, the fraction infected is around 19%. At 4 doses, we have \\$800 left for the campaign, and this is the optimal point that minimizes the number of students who get sick.\n",
@@ -935,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sharp-difficulty",
+   "id": "amino-excess",
    "metadata": {},
    "source": [
     "## Summary"
@@ -943,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quick-rotation",
+   "id": "timely-bottom",
    "metadata": {},
    "source": [
     "### Exercises\n",
@@ -953,7 +954,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fresh-costa",
+   "id": "drawn-hindu",
    "metadata": {},
    "source": [
     "**Exercise:** Suppose we have the option to quarantine infected students.  For example, a student who feels ill might be moved to an infirmary, or a private dorm room, until they are no longer infectious.\n",
@@ -964,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "transparent-entry",
+   "id": "impressive-librarian",
    "metadata": {},
    "outputs": [],
    "source": [
