--- a/jupyter/chap13.ipynb
+++ b/jupyter/chap13.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fifty-repair",
+   "id": "artistic-wells",
    "metadata": {},
    "source": [
     "# Chapter 13"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pharmaceutical-constant",
+   "id": "ceramic-rendering",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "aware-blade",
+   "id": "upper-basic",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -43,14 +43,14 @@
     "    !pip install pint\n",
     "    \n",
     "try:\n",
-    "    from modsim import *\n",
+    "    import modsim\n",
     "except ImportError:\n",
     "    !pip install modsimpy"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "increased-happiness",
+   "id": "extraordinary-router",
    "metadata": {},
    "source": [
     "### Code from previous chapters"
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "honey-backup",
+   "id": "spiritual-product",
    "metadata": {},
    "source": [
     "`make_system`, `plot_results`, and `calc_total_infected` are unchanged."
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "experimental-preparation",
+   "id": "entitled-playlist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "arbitrary-newspaper",
+   "id": "monthly-width",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,11 +122,12 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "attended-sherman",
+   "id": "antique-timer",
    "metadata": {},
    "outputs": [],
    "source": [
     "from numpy import arange\n",
+    "from modsim import TimeFrame\n",
     "\n",
     "def run_simulation(system, update_func):\n",
     "    \"\"\"Runs a simulation of the system.\n",
@@ -148,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "genetic-nylon",
+   "id": "swiss-system",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "descending-benjamin",
+   "id": "electoral-montgomery",
    "metadata": {},
    "source": [
     "In the previous chapters I presented an SIR model of infectious disease, specifically the Kermack-McKendrick model. We extended the model to include vaccination and the effect of a hand-washing campaign, and used the extended model to allocate a limited budget optimally, that is, to minimize the number of infections.\n",
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "italian-halifax",
+   "id": "nervous-spread",
    "metadata": {},
    "source": [
     "## Sweeping beta\n",
@@ -193,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "pleased-virus",
+   "id": "amazing-operations",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "operational-continuity",
+   "id": "adopted-selling",
    "metadata": {},
    "source": [
     "Then run the simulation for each value and print the results."
@@ -214,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "functional-bennett",
+   "id": "brief-minutes",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indian-islam",
+   "id": "understanding-teach",
    "metadata": {},
    "source": [
     "We can wrap that code in a function and store the results in a\n",
@@ -254,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "successful-holocaust",
+   "id": "single-burke",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "british-turtle",
+   "id": "wired-wrist",
    "metadata": {},
    "source": [
     "Now we can run `sweep_beta` like this:"
@@ -278,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "varied-attention",
+   "id": "collected-practice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "played-waters",
+   "id": "exempt-binary",
    "metadata": {},
    "source": [
     "And plot the results:"
@@ -296,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "possible-valley",
+   "id": "competitive-amount",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "defensive-river",
+   "id": "imported-huntington",
    "metadata": {},
    "source": [
     "The first line uses string operations to assemble a label for the\n",
@@ -337,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "composite-salad",
+   "id": "certain-second",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fuzzy-thesis",
+   "id": "affiliated-honduras",
    "metadata": {},
    "source": [
     "Remember that this figure\n",
@@ -378,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "competent-melissa",
+   "id": "worst-alexandria",
    "metadata": {},
    "source": [
     "## Sweeping gamma\n",
@@ -390,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "traditional-spirit",
+   "id": "advised-venice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "precise-review",
+   "id": "sensitive-folder",
    "metadata": {},
    "source": [
     "And run `sweep_beta` for each value of `gamma`:"
@@ -408,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "laughing-tonight",
+   "id": "determined-consent",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "oriental-north",
+   "id": "tutorial-venture",
    "metadata": {},
    "source": [
     "The following figure shows the results. When `gamma` is low, the\n",
@@ -447,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "large-radical",
+   "id": "rising-flour",
    "metadata": {},
    "source": [
     "## SweepFrame\n",
@@ -467,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "patient-navigation",
+   "id": "aquatic-federal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "minus-meaning",
+   "id": "level-distinction",
    "metadata": {},
    "source": [
     "`sweep_parameters` takes as parameters an array of values for `beta` and\n",
@@ -503,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "polish-excellence",
+   "id": "julian-liberia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cultural-olympus",
+   "id": "sharing-contemporary",
    "metadata": {},
    "source": [
     "With the results in a `SweepFrame`, we can plot each column like this:"
@@ -521,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "religious-placement",
+   "id": "superior-redhead",
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "familiar-appliance",
+   "id": "english-photographer",
    "metadata": {},
    "source": [
     "Alternatively, we can plot each row like this:"
@@ -560,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "instructional-navigator",
+   "id": "regular-drama",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "improving-montreal",
+   "id": "selective-evaluation",
    "metadata": {},
    "source": [
     "This example demonstrates one use of a `SweepFrame`: we can run the analysis once, save the results, and then generate different visualizations.\n",
@@ -607,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "filled-therapist",
+   "id": "logical-method",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "polished-favor",
+   "id": "corresponding-headline",
    "metadata": {},
    "source": [
     "Infection rates are lowest in the lower right, where the contact rate is and the recovery rate is high. They increase as we move to the upper left, where the contact rate is high and the recovery rate is low.\n",
@@ -648,7 +649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "level-barrel",
+   "id": "located-double",
    "metadata": {},
    "source": [
     "## Summary"
@@ -656,7 +657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "addressed-moscow",
+   "id": "flying-tracker",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -664,7 +665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bored-bennett",
+   "id": "stopped-breathing",
    "metadata": {},
    "source": [
     "**Exercise:**  Suppose the infectious period for the Freshman Plague is known to be 2 days on average, and suppose during one particularly bad year, 40% of the class is infected at some point.  Estimate the time between contacts."
@@ -673,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "raised-notification",
+   "id": "talented-crack",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "infectious-winner",
+   "id": "pressed-isaac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "automatic-consultancy",
+   "id": "equal-crazy",
    "metadata": {},
    "outputs": [],
    "source": [
